edit package json

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "yup": "^1.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
